--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,20 +6,46 @@ on:
       - main
 permissions:
         id-token: write # This is required for requesting the JWT  
-        contents: read
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v4
       with:
         role-to-assume: ${{ secrets.IAM_ROLE }}
         role-session-name: AWSSession
-        aws-region: us-east-1 # change this potentially
+        aws-region: us-east-1
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+    - name: Build, tag, and push image to Amazon ECR
+      env:
+        ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+        ECR_REPOSITORY: flask_app
+        IMAGE_TAG: latest
+      working-directory: app
+      run: |
+        docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v1
+      with:
+        terraform_version: 1.0.0
+    - name: Terraform Init
+      working-directory: tf
+      run: terraform init
+
+    - name: Terraform Plan
+      working-directory: tf
+      run: terraform plan
+
+    - name: Terraform Apply
+      working-directory: tf
+      run: terraform apply -auto-approve
+    - name: Terraform Destroy
+      if: failure()
+      run: terraform destroy -auto-approve
