--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,15 +37,15 @@ jobs:
         terraform_version: 1.0.0
     - name: Terraform Init
       working-directory: tf
-      run: terraform init -backend-config="bucket=${{secrets.TF_STATE_BUCKET_NAME}}" -backend-config="region=us-east-1"
+      run: terraform init -backend-config="bucket=${{secrets.TF_STATE_BUCKET_NAME}}" -backend-config="key=state.tfstate" -backend-config="region=us-east-1"
 
     - name: Terraform Plan
       working-directory: tf
-      run: terraform plan
+      run: terraform plan -out=terraform.tfplan 
 
     - name: Terraform Apply
       working-directory: tf
-      run: terraform apply -auto-approve
+      run: terraform apply -auto-approve terraform.tfplan
     - name: Terraform Destroy
       if: failure()
       run: terraform destroy -auto-approve
